option optimize_for = SPEED;
option java_package = "ddth.dasp.hetty.message";
option java_outer_classname = "HettyProtoBuf";

message Cookie {
    required string name   = 1;
    optional string value  = 2;
    optional string domain = 3;
    optional int32  port   = 4 [default = 0];
    optional string path   = 5;
    optional int32  maxAge = 6 [default = -1];
}

message NameValue {
    required string name   = 1;
    optional string value  = 2;
}

message Request {
    required string    id            =  1;
    required string    responseTopic =  2;
    required int32     channelId     =  3;    
    required int64     timestamp     =  4;
    required string    method        =  5;
    required string    uri           =  6;
    required string    domain        =  7;
    required int32     port          =  8;
    repeated NameValue urlParams     =  9;
    repeated string    pathParams    = 10;
    repeated Cookie    cookies       = 11;
    repeated NameValue headers       = 12;
    optional bytes     content       = 13;
    optional bool      isChunk       = 14 [default = false];
    optional int32     chunkSeq      = 15 [default = 0];
}

message Response {
    required string    requestId    = 1;
    required int64     duration     = 2;
    required int32     channelId    = 3;
    optional int32     status       = 4 [default = 200];
    repeated Cookie    cookies      = 5;
    repeated NameValue headers      = 6;
    optional bytes     content      = 7;
    optional bool      isChunk      = 8 [default = false];
    optional int32     chunkSeq     = 9 [default = 0];
}
